ant/prepParser.cpp

// Generated from ./prep.g4 by ANTLR 4.11.1


#include "prepListener.h"
#include "prepVisitor.h"

#include "prepParser.h"


using namespace antlrcpp;
using namespace ant;

using namespace antlr4;

namespace {

struct PrepParserStaticData final {
  PrepParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PrepParserStaticData(const PrepParserStaticData&) = delete;
  PrepParserStaticData(PrepParserStaticData&&) = delete;
  PrepParserStaticData& operator=(const PrepParserStaticData&) = delete;
  PrepParserStaticData& operator=(PrepParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag prepParserOnceFlag;
PrepParserStaticData *prepParserStaticData = nullptr;

void prepParserInitialize() {
  assert(prepParserStaticData == nullptr);
  auto staticData = std::make_unique<PrepParserStaticData>(
    std::vector<std::string>{
      "blockItem", "block", "blockItemNoRecurse", "blockNoRecurse", "parameterPackWithEllipses", 
      "parameterPack", "parameterSingle", "string", "bodyStringImplicit", 
      "recurse", "separator", "header", "footer", "body", "funcKeyword", 
      "funcKeywordNoRecurse", "funcDef", "declDef", "prog"
    },
    std::vector<std::string>{
      "", "'('", "','", "')'", "'@'", "", "'...'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "Number", "Ellipses", "Identifier", "WS", "Eof", 
      "CommentBlock", "CommentLine", "Define", "Recurse", "Separator", "Header", 
      "Footer", "Body", "String", "StringFuncKeyword"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  prepParserStaticData = staticData.release();
}

}

prepParser::prepParser(TokenStream *input) : prepParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

prepParser::prepParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  prepParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *prepParserStaticData->atn, prepParserStaticData->decisionToDFA, prepParserStaticData->sharedContextCache, options);
}

prepParser::~prepParser() {
  delete _interpreter;
}

const atn::ATN& prepParser::getATN() const {
  return *prepParserStaticData->atn;
}

std::string prepParser::getGrammarFileName() const {
  return "prep.g4";
}

const std::vector<std::string>& prepParser::getRuleNames() const {
  return prepParserStaticData->ruleNames;
}

const dfa::Vocabulary& prepParser::getVocabulary() const {
  return prepParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView prepParser::getSerializedATN() const {
  return prepParserStaticData->serializedATN;
}


//----------------- BlockItemContext ------------------------------------------------------------------

prepParser::BlockItemContext::BlockItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

prepParser::FuncKeywordContext* prepParser::BlockItemContext::funcKeyword() {
  return getRuleContext<prepParser::FuncKeywordContext>(0);
}

prepParser::BodyStringImplicitContext* prepParser::BlockItemContext::bodyStringImplicit() {
  return getRuleContext<prepParser::BodyStringImplicitContext>(0);
}


size_t prepParser::BlockItemContext::getRuleIndex() const {
  return prepParser::RuleBlockItem;
}

void prepParser::BlockItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockItem(this);
}

void prepParser::BlockItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockItem(this);
}


std::any prepParser::BlockItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitBlockItem(this);
  else
    return visitor->visitChildren(this);
}

prepParser::BlockItemContext* prepParser::blockItem() {
  BlockItemContext *_localctx = _tracker.createInstance<BlockItemContext>(_ctx, getState());
  enterRule(_localctx, 0, prepParser::RuleBlockItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(40);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case prepParser::Recurse:
      case prepParser::Separator:
      case prepParser::Header:
      case prepParser::Footer:
      case prepParser::Body: {
        enterOuterAlt(_localctx, 1);
        setState(38);
        funcKeyword();
        break;
      }

      case prepParser::String: {
        enterOuterAlt(_localctx, 2);
        setState(39);
        bodyStringImplicit();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

prepParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<prepParser::BlockItemContext *> prepParser::BlockContext::blockItem() {
  return getRuleContexts<prepParser::BlockItemContext>();
}

prepParser::BlockItemContext* prepParser::BlockContext::blockItem(size_t i) {
  return getRuleContext<prepParser::BlockItemContext>(i);
}


size_t prepParser::BlockContext::getRuleIndex() const {
  return prepParser::RuleBlock;
}

void prepParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void prepParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any prepParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

prepParser::BlockContext* prepParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, prepParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 516096) != 0) {
      setState(42);
      blockItem();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockItemNoRecurseContext ------------------------------------------------------------------

prepParser::BlockItemNoRecurseContext::BlockItemNoRecurseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

prepParser::FuncKeywordNoRecurseContext* prepParser::BlockItemNoRecurseContext::funcKeywordNoRecurse() {
  return getRuleContext<prepParser::FuncKeywordNoRecurseContext>(0);
}

prepParser::BodyStringImplicitContext* prepParser::BlockItemNoRecurseContext::bodyStringImplicit() {
  return getRuleContext<prepParser::BodyStringImplicitContext>(0);
}


size_t prepParser::BlockItemNoRecurseContext::getRuleIndex() const {
  return prepParser::RuleBlockItemNoRecurse;
}

void prepParser::BlockItemNoRecurseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockItemNoRecurse(this);
}

void prepParser::BlockItemNoRecurseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockItemNoRecurse(this);
}


std::any prepParser::BlockItemNoRecurseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitBlockItemNoRecurse(this);
  else
    return visitor->visitChildren(this);
}

prepParser::BlockItemNoRecurseContext* prepParser::blockItemNoRecurse() {
  BlockItemNoRecurseContext *_localctx = _tracker.createInstance<BlockItemNoRecurseContext>(_ctx, getState());
  enterRule(_localctx, 4, prepParser::RuleBlockItemNoRecurse);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case prepParser::Separator:
      case prepParser::Header:
      case prepParser::Footer:
      case prepParser::Body: {
        enterOuterAlt(_localctx, 1);
        setState(48);
        funcKeywordNoRecurse();
        break;
      }

      case prepParser::String: {
        enterOuterAlt(_localctx, 2);
        setState(49);
        bodyStringImplicit();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockNoRecurseContext ------------------------------------------------------------------

prepParser::BlockNoRecurseContext::BlockNoRecurseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<prepParser::BlockItemNoRecurseContext *> prepParser::BlockNoRecurseContext::blockItemNoRecurse() {
  return getRuleContexts<prepParser::BlockItemNoRecurseContext>();
}

prepParser::BlockItemNoRecurseContext* prepParser::BlockNoRecurseContext::blockItemNoRecurse(size_t i) {
  return getRuleContext<prepParser::BlockItemNoRecurseContext>(i);
}


size_t prepParser::BlockNoRecurseContext::getRuleIndex() const {
  return prepParser::RuleBlockNoRecurse;
}

void prepParser::BlockNoRecurseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockNoRecurse(this);
}

void prepParser::BlockNoRecurseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockNoRecurse(this);
}


std::any prepParser::BlockNoRecurseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitBlockNoRecurse(this);
  else
    return visitor->visitChildren(this);
}

prepParser::BlockNoRecurseContext* prepParser::blockNoRecurse() {
  BlockNoRecurseContext *_localctx = _tracker.createInstance<BlockNoRecurseContext>(_ctx, getState());
  enterRule(_localctx, 6, prepParser::RuleBlockNoRecurse);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 507904) != 0) {
      setState(52);
      blockItemNoRecurse();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterPackWithEllipsesContext ------------------------------------------------------------------

prepParser::ParameterPackWithEllipsesContext::ParameterPackWithEllipsesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* prepParser::ParameterPackWithEllipsesContext::Ellipses() {
  return getToken(prepParser::Ellipses, 0);
}

std::vector<tree::TerminalNode *> prepParser::ParameterPackWithEllipsesContext::Identifier() {
  return getTokens(prepParser::Identifier);
}

tree::TerminalNode* prepParser::ParameterPackWithEllipsesContext::Identifier(size_t i) {
  return getToken(prepParser::Identifier, i);
}


size_t prepParser::ParameterPackWithEllipsesContext::getRuleIndex() const {
  return prepParser::RuleParameterPackWithEllipses;
}

void prepParser::ParameterPackWithEllipsesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterPackWithEllipses(this);
}

void prepParser::ParameterPackWithEllipsesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterPackWithEllipses(this);
}


std::any prepParser::ParameterPackWithEllipsesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitParameterPackWithEllipses(this);
  else
    return visitor->visitChildren(this);
}

prepParser::ParameterPackWithEllipsesContext* prepParser::parameterPackWithEllipses() {
  ParameterPackWithEllipsesContext *_localctx = _tracker.createInstance<ParameterPackWithEllipsesContext>(_ctx, getState());
  enterRule(_localctx, 8, prepParser::RuleParameterPackWithEllipses);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(prepParser::T__0);
    setState(72);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case prepParser::Identifier: {
        setState(59);
        match(prepParser::Identifier);
        setState(64);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(60);
            match(prepParser::T__1);
            setState(61);
            match(prepParser::Identifier); 
          }
          setState(66);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
        }
        setState(69);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == prepParser::T__1) {
          setState(67);
          match(prepParser::T__1);
          setState(68);
          match(prepParser::Ellipses);
        }
        break;
      }

      case prepParser::Ellipses: {
        setState(71);
        match(prepParser::Ellipses);
        break;
      }

      case prepParser::T__2: {
        break;
      }

    default:
      break;
    }
    setState(74);
    match(prepParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterPackContext ------------------------------------------------------------------

prepParser::ParameterPackContext::ParameterPackContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> prepParser::ParameterPackContext::Identifier() {
  return getTokens(prepParser::Identifier);
}

tree::TerminalNode* prepParser::ParameterPackContext::Identifier(size_t i) {
  return getToken(prepParser::Identifier, i);
}


size_t prepParser::ParameterPackContext::getRuleIndex() const {
  return prepParser::RuleParameterPack;
}

void prepParser::ParameterPackContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterPack(this);
}

void prepParser::ParameterPackContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterPack(this);
}


std::any prepParser::ParameterPackContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitParameterPack(this);
  else
    return visitor->visitChildren(this);
}

prepParser::ParameterPackContext* prepParser::parameterPack() {
  ParameterPackContext *_localctx = _tracker.createInstance<ParameterPackContext>(_ctx, getState());
  enterRule(_localctx, 10, prepParser::RuleParameterPack);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(prepParser::T__0);
    setState(85);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == prepParser::Identifier) {
      setState(77);
      match(prepParser::Identifier);
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == prepParser::T__1) {
        setState(78);
        match(prepParser::T__1);
        setState(79);
        match(prepParser::Identifier);
        setState(84);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(87);
    match(prepParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterSingleContext ------------------------------------------------------------------

prepParser::ParameterSingleContext::ParameterSingleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t prepParser::ParameterSingleContext::getRuleIndex() const {
  return prepParser::RuleParameterSingle;
}

void prepParser::ParameterSingleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterSingle(this);
}

void prepParser::ParameterSingleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterSingle(this);
}


std::any prepParser::ParameterSingleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitParameterSingle(this);
  else
    return visitor->visitChildren(this);
}

prepParser::ParameterSingleContext* prepParser::parameterSingle() {
  ParameterSingleContext *_localctx = _tracker.createInstance<ParameterSingleContext>(_ctx, getState());
  enterRule(_localctx, 12, prepParser::RuleParameterSingle);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(prepParser::T__0);
    setState(93);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1048566) != 0) {
      setState(90);
      _la = _input->LA(1);
      if (_la == 0 || _la == Token::EOF || (_la == prepParser::T__2)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(95);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(96);
    match(prepParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StringContext ------------------------------------------------------------------

prepParser::StringContext::StringContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* prepParser::StringContext::String() {
  return getToken(prepParser::String, 0);
}


size_t prepParser::StringContext::getRuleIndex() const {
  return prepParser::RuleString;
}

void prepParser::StringContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterString(this);
}

void prepParser::StringContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitString(this);
}


std::any prepParser::StringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitString(this);
  else
    return visitor->visitChildren(this);
}

prepParser::StringContext* prepParser::string() {
  StringContext *_localctx = _tracker.createInstance<StringContext>(_ctx, getState());
  enterRule(_localctx, 14, prepParser::RuleString);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(prepParser::String);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BodyStringImplicitContext ------------------------------------------------------------------

prepParser::BodyStringImplicitContext::BodyStringImplicitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

prepParser::StringContext* prepParser::BodyStringImplicitContext::string() {
  return getRuleContext<prepParser::StringContext>(0);
}


size_t prepParser::BodyStringImplicitContext::getRuleIndex() const {
  return prepParser::RuleBodyStringImplicit;
}

void prepParser::BodyStringImplicitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBodyStringImplicit(this);
}

void prepParser::BodyStringImplicitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBodyStringImplicit(this);
}


std::any prepParser::BodyStringImplicitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitBodyStringImplicit(this);
  else
    return visitor->visitChildren(this);
}

prepParser::BodyStringImplicitContext* prepParser::bodyStringImplicit() {
  BodyStringImplicitContext *_localctx = _tracker.createInstance<BodyStringImplicitContext>(_ctx, getState());
  enterRule(_localctx, 16, prepParser::RuleBodyStringImplicit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RecurseContext ------------------------------------------------------------------

prepParser::RecurseContext::RecurseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* prepParser::RecurseContext::Recurse() {
  return getToken(prepParser::Recurse, 0);
}

prepParser::ParameterPackWithEllipsesContext* prepParser::RecurseContext::parameterPackWithEllipses() {
  return getRuleContext<prepParser::ParameterPackWithEllipsesContext>(0);
}


size_t prepParser::RecurseContext::getRuleIndex() const {
  return prepParser::RuleRecurse;
}

void prepParser::RecurseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRecurse(this);
}

void prepParser::RecurseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRecurse(this);
}


std::any prepParser::RecurseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitRecurse(this);
  else
    return visitor->visitChildren(this);
}

prepParser::RecurseContext* prepParser::recurse() {
  RecurseContext *_localctx = _tracker.createInstance<RecurseContext>(_ctx, getState());
  enterRule(_localctx, 18, prepParser::RuleRecurse);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(prepParser::Recurse);
    setState(103);
    parameterPackWithEllipses();
    setState(104);
    match(prepParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SeparatorContext ------------------------------------------------------------------

prepParser::SeparatorContext::SeparatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* prepParser::SeparatorContext::Separator() {
  return getToken(prepParser::Separator, 0);
}

prepParser::StringContext* prepParser::SeparatorContext::string() {
  return getRuleContext<prepParser::StringContext>(0);
}


size_t prepParser::SeparatorContext::getRuleIndex() const {
  return prepParser::RuleSeparator;
}

void prepParser::SeparatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSeparator(this);
}

void prepParser::SeparatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSeparator(this);
}


std::any prepParser::SeparatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitSeparator(this);
  else
    return visitor->visitChildren(this);
}

prepParser::SeparatorContext* prepParser::separator() {
  SeparatorContext *_localctx = _tracker.createInstance<SeparatorContext>(_ctx, getState());
  enterRule(_localctx, 20, prepParser::RuleSeparator);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(prepParser::Separator);
    setState(107);
    string();
    setState(108);
    match(prepParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

prepParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* prepParser::HeaderContext::Header() {
  return getToken(prepParser::Header, 0);
}

prepParser::StringContext* prepParser::HeaderContext::string() {
  return getRuleContext<prepParser::StringContext>(0);
}


size_t prepParser::HeaderContext::getRuleIndex() const {
  return prepParser::RuleHeader;
}

void prepParser::HeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHeader(this);
}

void prepParser::HeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<prepListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHeader(this);
}


std::any prepParser::HeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<prepVisitor*>(visitor))
    return parserVisitor->visitHeader(this);
  else
    return visitor->visitChildren(this);
}

prepParser::HeaderContext* prepParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 22, prepParser::RuleHeader);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(prepParser::Header);
    setState(111);
    string();
    setState(112);
    match(prepParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FooterContext ------------------------------------------------------------------

prepParser::FooterContext::FooterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* prepParser::FooterContext::Footer() {
  return getToken(prepParser::Footer, 0);
}
